--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ main .permierImage img {
     left: 0;
     width: 100%;
     height: 400px;
-    background-color: rgba(0, 0, 0, 0.6); 
+    background-color: rgba(0, 0, 0, 0.737); 
     z-index: 1; 
   }
 
@@ -209,7 +209,10 @@ footer{
     margin: 0 auto;
     align-items: center;
     width: 100%;
-    background-color: var(--couleurFooter);
+    background: linear-gradient(0deg, #04061be0, #04061be0), url("assets/aboutUS.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    /* background-color: var(--couleurFooter); */
     color: var(--blanc);
 }
 footer .footerElements{
